# llm-security-auditor

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  SETUP.md  audit_prompt.py  config.yaml  demo.py  docker-compose.yml  env.example  optimize_prompt.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
attacker/: __init__.py
configs/: code_review_assistant.yaml  customer_support_bot.yaml  financial_advisor.yaml  holistic_customer_support.yaml  holistic_educational_tutor.yaml  holistic_sales_assistant.yaml  vulnerable_test.yaml
data/: advanced_jailbreak_patterns.yaml  harmful_intents.yaml
defender/: __init__.py
docs/: ADVANCED_JAILBREAK_TECHNIQUES.md  DOCKER_GUIDE.md  DSPY_BEST_PRACTICES.md  HOLISTIC_OPTIMIZATION.md
gateway/: config.py  dspy_showcase.py  gateway.py  holistic_optimizer.py  llm_clients.py  main.py  security_auditor.py
prompts/: code_review_assistant.txt  customer_support_bot.txt  financial_advisor.txt  test_optimization_optimized.txt
scripts/: SCRIPTS.md  bootstrap.py  demo_real_llm.py  evaluate.py  test_all_models.py  test_with_limits.py
scripts/dev/: run_comprehensive_tests.py
tests/: conftest.py  run_dspy_validation.py  test_dspy_evaluation_framework.py  test_dspy_integration.py  test_end_to_end.py  test_holistic_optimizer_dspy.py  test_integration_gpt4.py  test_project_integration.py  test_security_auditor.py
